tweaked html and worked on js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <div id="startPage">
+        <div id="startpage">
             <h1 class="quizHead">Coding Quiz Challenge!</h1>
                 <p>Try to answer these sports questions within the time limit. Incorrect answers will penalize your scoretime by 12 seconds!
                 </p>
@@ -30,8 +30,8 @@
         <div id="post-game">
             <h1>Finished</h1>
             <p><span id="score"></span></p>
-            <p>Enter initials:
-                <input type="text" class="initials" id="initialsEntry">
+            <p>Enter nickname:
+                <input type="text" class="nickname" id="nicknameform">
                 <button class="buttons" id="submitBtn">Submit</button>
             </p>
         </div>
@@ -45,3 +45,7 @@
 </body>
 <script src = "script.js"></script>
 </html>
+
+
+
+
