start button works now

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <div id="startpage">
-            <h1 class="quizHead">Coding Quiz Challenge!</h1>
+            <h1 class="quizhead">Quiz Challenge!</h1>
                 <p>Try to answer these sports questions within the time limit. Incorrect answers will penalize your scoretime by 12 seconds!
                 </p>
         
@@ -18,28 +18,26 @@
             </div>
         </div>
         
-        <div class="questionSection">
-            <h1 class="questionHead" ></h1>
+        <div class="questionpage">
+            <h1 class="question" ></h1>
                 <ul class="qList">
                     <li><button class="buttons answer1"></button></li>
                     <li><button class="buttons answer2"></button></li>
-                    <li><button class="buttons answer3"></button></li><!--correct-->
+                    <li><button class="buttons answer3"></button></li>
                     <li><button class="buttons answer4"></button></li>
                 </ul>
         </div>
-        <div id="post-game">
+        <div id="postgamepage">
             <h1>Finished</h1>
             <p><span id="score"></span></p>
             <p>Enter nickname:
                 <input type="text" class="nickname" id="nicknameform">
-                <button class="buttons" id="submitBtn">Submit</button>
+                <button class="buttons" id="submitbtn">Submit</button>
             </p>
         </div>
-        <div id="highscorePage">
+        <div id="highscorepage">
             <h1>Highscores</h1>
             <div id="highscores"></div>
-            <button id="goBack" class="buttons">Go Back</button>
-            <button id="clearHighscores" class="buttons">Clear Highscores</button>
         </div>
     </main> 
 </body>
