added readme and scoring

--- a/index.html
+++ b/index.html
@@ -35,20 +35,14 @@
         </section>
 
         <!-- post your score -->
-        <div id="adding-score">
-            <p id="your-score">Your score:</p>
+        <div id="addingscore">
+            <p id="scoring">Your score:</p>
             <p>Name: </p>
-            <input id="score-name" type="text">
-            <button id="adding-score-yes">Yes</button>
+            <input id="scorename" type="text">
+            <button id="adding-score-yes">Submit</button>
         </div>
 
-        <!-- highscores -->
-        <div id="score">
-            <ul id="scoreboard"></ul>
-            <div id="clear-scoreboard"></div>
-            <button id="clear-score">Clear Scoreboard</button>
-            <button id="play-again">Play Again</button>
-        </div>
+       
         
     </main>
     <script src="script.js"></script>
