added timer and score

--- a/index2.html
+++ b/index2.html
@@ -12,16 +12,21 @@
     <main>
         <div id="startpage">
             <h1 class="quizhead">Quiz Challenge!</h1>
-            <p>Try to answer these sports questions within the time limit. Incorrect answers will penalize your
-                scoretime by 12 seconds!
-            </p>
+            <div id="highScore">
+                High Score:
+            </div>
+            <div id="yourScore">
+                Your Score:
+            </div>
+
 
             <div id="startBtn">
-                <button class="buttons">Start Quiz</button>
+               <a href="index.html"> <button class="buttons">Home</button></a>
             </div>
+
         </div>
     </main>
-
+<script src="script2.js" > </script>
 </body>
 
 </html>
