--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Code-Quiz</title>
+    <title>Sports-Quiz</title>
     <!-- <link rel="stylesheet" href="./assets/style.css"> -->
 </head>
 
 <body>
     <header>
-        <h3 class="header">Coding Quiz</h3>
+        <h3 class="header">Sports Quiz</h3>
     </header>
 
     <main>
         <div id="intro">
             <p class="main">
-                Start this code quiz-You lose time for every incorrect answer
+                Start this Sports quiz-You lose time for every incorrect answer
             </p>
             <button id="startbtn">Start</button>
         </div>
